[gd_scene load_steps=9 format=3 uid="uid://duts2ngkeqjk8"]

[ext_resource type="Script" path="res://scripts/bullet.gd" id="1_cxai5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_svvag"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3q3w4"]
albedo_color = Color(0.976471, 1, 0.105882, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pgjum"]

[sub_resource type="Gradient" id="Gradient_twgic"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_buahc"]
gradient = SubResource("Gradient_twgic")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8rty5"]
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, 0, -50)
spread = 2.63
gravity = Vector3(0, 0, 0)
initial_velocity_min = 21.9
initial_velocity_max = 29.2
color = Color(0.588235, 0.72549, 0.862745, 1)
color_ramp = SubResource("GradientTexture1D_buahc")

[sub_resource type="SphereMesh" id="SphereMesh_nmokd"]
radius = 0.085
height = 0.125

[node name="bullet" type="Node3D"]
transform = Transform3D(0.175, 0, 0, 0, 0.175, 0, 0, 0, 0.175, 0.0181178, 0.665176, -1.64645)
script = ExtResource("1_cxai5")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.4676, 13.281)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_svvag")

[node name="l_bullet" type="MeshInstance3D" parent="."]
transform = Transform3D(0.415, 0, 0, 0, -1.81402e-08, -0.415, 0, 0.415, -1.81402e-08, -4.44253, 2.3974, 9.06889)
material_override = SubResource("StandardMaterial3D_3q3w4")
mesh = SubResource("CapsuleMesh_pgjum")

[node name="hit_particles" type="GPUParticles3D" parent="l_bullet"]
transform = Transform3D(2.40964, 0, 0, 0, -1.05329e-07, 2.40964, 0, -2.40964, -1.05329e-07, -0.100623, -0.186283, -0.21493)
visible = false
transparency = 0.49
cast_shadow = 0
amount = 1
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_8rty5")
draw_pass_1 = SubResource("SphereMesh_nmokd")

[node name="OmniLight3D" type="OmniLight3D" parent="l_bullet"]
transform = Transform3D(2.40964, 0, 0, 0, 2.40964, -7.10543e-14, 0, 7.10543e-14, 2.40964, 0, 1.2382, -5.41233e-08)
light_color = Color(0.270588, 1, 1, 1)
light_energy = 0.42
light_indirect_energy = 0.304
light_volumetric_fog_energy = 0.188
omni_range = 0.300347

[node name="r_bullet" type="MeshInstance3D" parent="."]
transform = Transform3D(0.415, 0, 0, 0, -1.81402e-08, -0.415, 0, 0.415, -1.81402e-08, 5.07768, -1.34345, 8.21305)
material_override = SubResource("StandardMaterial3D_3q3w4")
mesh = SubResource("CapsuleMesh_pgjum")

[node name="OmniLight3D" type="OmniLight3D" parent="r_bullet"]
transform = Transform3D(2.40964, 0, 0, 0, 2.40964, -7.10543e-14, 0, 7.10543e-14, 2.40964, 0, 1.2382, -5.41233e-08)
light_color = Color(0.545098, 0.243137, 0.352941, 1)
light_energy = 0.42
light_indirect_energy = 0.304
light_volumetric_fog_energy = 0.188
omni_range = 0.300347

[node name="hit_particles" type="GPUParticles3D" parent="r_bullet"]
transform = Transform3D(2.40964, 0, 0, 0, -1.05329e-07, 2.40964, 0, -2.40964, -1.05329e-07, 0.0536785, -0.186283, -0.21493)
visible = false
transparency = 0.5
cast_shadow = 0
amount = 1
process_material = SubResource("ParticleProcessMaterial_8rty5")
draw_pass_1 = SubResource("SphereMesh_nmokd")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
